Prevented unnecessary classes being left behind when fixedPositionType is changed from right or left to top or bottom.

--- a/src/blocks/_pro/fixed-display/style.scss
+++ b/src/blocks/_pro/fixed-display/style.scss
@@ -9,6 +9,7 @@
 	position: fixed;
 	margin-block-start: 0;
 	z-index: 99999;
+	width: 100%;
 	
 	/* タイマー機能用クラス */
 	&.is-timed-hide {
